--- a/lang/korean.xml
+++ b/lang/korean.xml
@@ -4,18 +4,22 @@
 
 
 		<!-- ================ C I T Y   P R O J E C T S ================ -->
-		<Replace Tag="LOC_PROJECT_LAUNCH_MOON_LANDING_DESCRIPTION" Language="ko_KR">
-			<Text>우주 경쟁 프로젝트의 하나로, 달에 인간을 상륙시키기 위해 대형 로켓을 발사합니다. 플레이어의 턴당 [ICON_Science] 과학 생산량의 5배인 [ICON_Culture] 문화 보너스를 일회성으로 부여하며, 과학 승리로의 두 번째 단계를 표시합니다.</Text>
-		</Replace>
-		<Replace Tag="LOC_PROJECT_LAUNCH_MOON_LANDING_POPUP" Language="ko_KR">
-			<Text>성공적으로 달에 인간을 상륙시켰습니다! 플레이어의 턴당 [ICON_Science] 과학 생산량의 5배인 [ICON_Culture] 문화 보너스를 일회성으로 부여하며, 과학 승리로의 두 번째 단계를 표시합니다.</Text>
-		</Replace>
+
+			<!-- ================ Moon Landing ================ -->
+			<Replace Tag="LOC_PROJECT_LAUNCH_MOON_LANDING_DESCRIPTION" Language="ko_KR">
+				<Text>우주 경쟁 프로젝트의 하나로, 달에 인간을 상륙시키기 위해 대형 로켓을 발사합니다. 플레이어의 턴당 [ICON_Science] 과학 생산량의 5배인 [ICON_Culture] 문화 보너스를 일회성으로 부여하며, 과학 승리로의 두 번째 단계를 표시합니다.</Text>
+			</Replace>
+			<Replace Tag="LOC_PROJECT_LAUNCH_MOON_LANDING_POPUP" Language="ko_KR">
+				<Text>성공적으로 달에 인간을 상륙시켰습니다! 플레이어의 턴당 [ICON_Science] 과학 생산량의 5배인 [ICON_Culture] 문화 보너스를 일회성으로 부여하며, 과학 승리로의 두 번째 단계를 표시합니다.</Text>
+			</Replace>
 
 
 		<!-- ================ C I V I C S ================ -->
-		<Replace Tag="LOC_CIVIC_ENVIRONMENTALISM_DESCRIPTION" Language="ko_KR">
-			<Text>제국 전체에 [ICON_Tourism] 관광이 +50% 증가합니다.</Text>
-		</Replace>
+
+			<!-- ================ Environmentalism ================ -->
+			<Replace Tag="LOC_CIVIC_ENVIRONMENTALISM_DESCRIPTION" Language="ko_KR">
+				<Text>제국 전체에 [ICON_Tourism] 관광이 +50% 증가합니다.</Text>
+			</Replace>
 
 
 		<!-- ================ C I V I L I Z A T I O N S ================ -->
@@ -114,6 +118,9 @@
 			<Replace Tag="LOC_IMPROVEMENT_CHATEAU_DESCRIPTION" Language="ko_KR">
 				<Text>프랑스 특유의 샤토를 지을 수 있는 건설자 능력을 잠금 해제합니다.[NEWLINE][NEWLINE][ICON_Culture] 문화 +2를 제공합니다. 매력도 +1을 제공합니다. 인접한 모든 불가사의마다 [ICON_Culture] 문화 +1을 제공합니다. 인접한 모든 사치 자원마다 [ICON_Food] 식량 +1과 [ICON_Gold] 금 +1을 제공합니다. 봉건제 사회 제도를 획득하면 [ICON_HOUSING] 주거공간 +1을 추가 제공하며, 비행을 연구하면 [ICON_TOURISM] 관광을 제공합니다. 강 근처에만 지을 수 있습니다.</Text>
 			</Replace>
+			<Replace Tag="LOC_TECH_CASTLES_DESCRIPTION" Language="ko_KR">
+				<Text>만리장성 시설 인접 보너스 [ICON_Culture] 문화를 제공합니다. 프랑스로 플레이하는 경우 스파이를 무료로 얻습니다.</Text>
+			</Replace>
 			<Replace Tag="LOC_TRAIT_CIVILIZATION_WONDER_TOURISM_DESCRIPTION" Language="ko_KR">
 				<Text>성 기술 연구로 무료 스파이를 1명 더 받으며 스파이를 더 생성할 수 있는 능력을 얻습니다. 모든 스파이는 무료 진급을 가진 요원으로 시작합니다. 중세, 르네상스 및 산업 시대 불가사의 건설에 대해 [ICON_Production] 생산력 +20%를 제공합니다. 모든 시대의 불가사의 [ICON_Tourism] 관광 생산량이 50% 증가합니다.</Text>
 			</Replace>
@@ -180,10 +187,16 @@
 			</Replace>
 
 			<!-- ================ Japan ================ -->
+			<Replace Tag="LOC_TRAIT_CIVILIZATION_ADJACENT_DISTRICTS_DESCRIPTION" Language="ko_KR">
+				<Text>모든 특수지구는 옆에 있는 다른 특수지구에서 기본 인접 보너스를 추가로 받습니다. 상업 중심지 특수지구는 더 이상 강으로부터 인접 보너스를 얻을 수 없습니다.</Text>
+			</Replace>
 
 			<!-- ================ Khmer ================ -->
 			<Replace Tag="LOC_BUILDING_PRASAT_DESCRIPTION" Language="ko_KR">
-				<Text>크메르 특유의 건물입니다. [ICON_Faith] 신앙으로 사도와 이단심문관을 구매하는 데 필요합니다. 지어질 때 무료 선교사 1명을 제공합니다. 이 도시에서 구매한 선교사는 신학 전투에서 처치되었을 때 [ICON_GreatWork_Relic] 성유물을 부여하는 순교자 능력을 얻습니다.</Text>
+				<Text>사원을 대체하는 크메르 특유의 건물입니다. [ICON_Faith] 신앙으로 사도와 이단심문관을 구매하는 데 필요합니다. 지어질 때 무료 선교사 1명을 제공합니다. (종교 창시 필요)</Text>
+			</Replace>
+			<Replace Tag="LOC_BUILDING_SHOPPING_MALL_DESCRIPTION" Language="ko_KR">
+				<Text>[ICON_Tourism] 관광 +6을 획득합니다. 도시에 여러 개의 주택가가 있는 경우에도 도시에 1회만 건설할 수 있습니다.</Text>
 			</Replace>
 			<Row Tag="LOC_DISTRICT_HOLY_SITE_RIVER_FAITH" Language="ko_KR">
 				<Text>성지 특수지구는 인접한 강으로부터 [ICON_Faith] 신앙 +{1_num}를 획득합니다.</Text>
@@ -192,7 +205,7 @@
 				<Text>외국 도시와 연결된 모든 [ICON_TradeRoute] 교역로에서 양 문명 모두 [ICON_FAITH] 신앙 +2를 획득합니다. 송수로를 보유한 각 도시는 유흥에 의한 [ICON_FAITH] 신앙 +3 및 [ICON_AMENITIES] 쾌적도 +1을 제공합니다. 농장은 송수로에 인접한 경우 [ICON_FOOD] 식량 +2를 제공합니다.</Text>
 			</Replace>
 			<Replace Tag="LOC_TRAIT_LEADER_MONASTERIES_KING_DESCRIPTION" Language="ko_KR">
-				<Text>송수로 특수지구의 건설 시간이 반으로 감소합니다. 성지를 강에 배치할 경우 [ICON_FOOD] 식량 +2, [ICON_FAITH] 신앙 +2 및 [ICON_HOUSING] 주거공간 +1을 제공합니다. 성지는 문화 폭탄을 유발합니다.</Text>
+				<Text>성지를 강에 배치할 경우 [ICON_FOOD] 식량 +2, [ICON_FAITH] 신앙 +2 및 [ICON_HOUSING] 주거공간 +1을 제공합니다. 성지는 문화 폭탄을 유발합니다.</Text>
 			</Replace>
 			<Replace Tag="LOC_UNIT_KHMER_DOMREY_DESCRIPTION" Language="ko_KR">
 				<Text>캐터펄트를 대체하는 크메르 특유의 고전 시대 공성 유닛입니다. 캐터펄트보다 공격력 및 방어력이 모두 강합니다. 같은 턴에 이동 및 발포 가능하며 통제 지역 영향력을 행사합니다.</Text>
@@ -300,6 +313,9 @@
 			<Replace Tag="LOC_IMPROVEMENT_PAIRIDAEZA_DESCRIPTION" Language="ko_KR">
 				<Text>페르시아 특유의 파이리다에자를 지을 수 있는 건설자 능력을 잠금 해제합니다.[NEWLINE][NEWLINE][ICON_CULTURE] 문화 +1 및 [ICON_GOLD] 금 +2를 제공합니다. 매력도 +2를 제공합니다. 인접한 성지, 캠퍼스 또는 극장가마다 [ICON_CULTURE] 문화 +1을 제공합니다. 인접한 상업 중심지, 항만, 산업구역 또는 도심부마다 [ICON_GOLD] 금 +1을 제공합니다. 기술 발전표 및 사회 제도표의 진전에 따라 추가 [ICON_Culture] 문화 및 [ICON_Tourism] 관광을 제공합니다. 설원, 툰드라, 설원 언덕, 툰드라 언덕 위에 또는 다른 파이리다에자 옆에 지을 수 없습니다.</Text>
 			</Replace>
+			<Replace Tag="LOC_TRAIT_CIVILIZATION_SATRAPIES_DESCRIPTION" Language="ko_KR">
+				<Text>정치 철학 완성 시 [ICON_TradeRoute] 교역로 최대치 +1을 제공합니다. 자국 도시 간의 교역에서 [ICON_Gold] 금 +2 및 [ICON_Culture] 문화 +1을 제공합니다. 기술 발전표 및 사회 제도표의 진전에 따라 추가 [ICON_Gold] 금 및 [ICON_Culture] 문화를 제공합니다. 자국 영토 내의 도로는 일반적인 경우보다 한 단계 업그레이드된 도로입니다.</Text>
+			</Replace>
 			<Replace Tag="LOC_TRAIT_LEADER_FALL_BABYLON_EXPANSION1_DESCRIPTION" Language="ko_KR">
 				<Text>모든 유닛이 공격시 [ICON_Strength] 전투력 +3을 얻습니다. 주둔 유닛이 있는 점령 도시에 턴당 충성심 +5가 부여됩니다. 기습 전쟁의 선포는 전쟁 도발과 전쟁 피로도 유발의 목적으로만 공식 전쟁으로 인정됩니다.</Text>
 			</Replace>
@@ -313,6 +329,21 @@
 			</Replace>
 
 			<!-- ================ Rome ================ -->
+			<Replace Tag="LOC_DISTRICT_BATH_DESCRIPTION" Language="ko_KR">
+				<Text>도시 성장을 위한 로마 특유의 특수지구입니다. 송수로 특수지구를 대체하며 건설 비용이 더 낮습니다. 인접한 특수지구 타일 2개당 보너스 [ICON_Culture] 문화 +1을 획득합니다.[NEWLINE][NEWLINE]인접한 강, 호수, 오아시스 또는 산으로부터 이 도시에 담수 원천을 제공합니다. 담수를 확보하지 못한 도시에는 [ICON_Housing] 주거공간을 최대 6만큼 제공합니다. 하지만 이미 담수를 확보한 도시에는 [ICON_Housing] 주거공간 +2를 제공합니다. 목욕탕은 위와 관계없이 추가 보너스[ICON_Housing] 주거공간 +2 및 [ICON_Amenities] 쾌적도 +1을 제공합니다. 도심부 옆에 지어야 합니다.</Text>
+			</Replace>
+			<Replace Tag="LOC_DISTRICT_BATH_EXPANSION2_ALT_DESCRIPTION" Language="ko_KR">
+				<Text>도시 성장을 위한 로마 특유의 특수지구입니다. 송수로 특수지구를 대체하며 건설 비용이 더 낮습니다. 인접한 특수지구 타일 2개당 보너스 [ICON_Culture] 문화 +1을 획득합니다.[NEWLINE][NEWLINE]인접한 강, 호수, 오아시스 또는 산으로부터 이 도시에 담수 원천을 제공합니다. 담수를 확보하지 못한 도시에는 [ICON_Housing] 주거공간을 최대 6만큼 제공합니다. 하지만 이미 담수를 확보한 도시에는 [ICON_Housing] 주거공간 +2를 제공합니다. 목욕탕은 위와 관계없이 추가 보너스 [ICON_Housing] 주거공간 +2 및 [ICON_Amenities] 쾌적도 +1을 제공합니다. 지열 열하 옆에 건설한 경우 [ICON_Amenities] 쾌적도 +1을 제공합니다. 가뭄 기간 중 [ICON_Food] 식량 손실을 방지합니다. 도심부 옆에 건설해야 합니다.</Text>
+			</Replace>
+			<Replace Tag="LOC_DISTRICT_BATH_EXPANSION2_DESCRIPTION" Language="ko_KR">
+				<Text>도시 성장을 위한 로마 특유의 특수지구입니다. 송수로 특수지구를 대체하며 건설 비용이 더 낮습니다. 인접한 특수지구 타일 2개당 보너스 [ICON_Culture] 문화 +1을 획득합니다.[NEWLINE][NEWLINE]인접한 강, 호수, 오아시스 또는 산으로부터 이 도시에 담수 원천을 제공합니다. 담수를 확보하지 못한 도시에는 [ICON_Housing] 주거공간을 최대 6만큼 제공합니다. 하지만 이미 담수를 확보한 도시에는 [ICON_Housing] 주거공간 +2를 제공합니다. 목욕탕은 위와 관계없이 추가 보너스 [ICON_Housing] 주거공간 +2 및 [ICON_Amenities] 쾌적도 +1을 제공합니다. 지열 열하 옆에 건설한 경우 [ICON_Amenities] 쾌적도 +1을 제공합니다. 가뭄 기간 중 [ICON_Food] 식량 손실을 방지합니다. 도심부 옆에 건설해야 합니다.</Text>
+			</Replace>
+			<Replace Tag="LOC_TRAIT_FALLBABYLON_COMBAT_BONUS_DESCRIPTION" Language="ko_KR">
+				<Text>공격시 전투력 +{1_Value}</Text>
+			</Replace>
+			<Replace Tag="LOC_TRAIT_LEADER_FALL_BABYLON_DESCRIPTION" Language="ko_KR">
+				<Text>모든 유닛이 공격시 [ICON_Strength] 전투력 +3을 얻습니다. 점령 도시에 생산량 페널티가 없습니다. 기습 전쟁의 선포는 전쟁 도발과 전쟁 피로도 유발의 목적으로써만 공식 전쟁으로 인정됩니다.</Text>
+			</Replace>
 
 			<!-- ================ Russia ================ -->
 			<Replace Tag="LOC_DISTRICT_LAVRA_DESCRIPTION" Language="ko_KR">
@@ -325,9 +356,6 @@
 			<!-- ================ Scotland ================ -->
 			<Replace Tag="LOC_IMPROVEMENT_GOLF_COURSE_DESCRIPTION" Language="ko_KR">
 				<Text>스코틀랜드 특유의 골프 코스를 지을 수 있는 건설자 능력을 잠금 해제합니다.[NEWLINE][NEWLINE][ICON_AMENITIES] 쾌적도 +1, [ICON_GOLD] 금 +2 및 [ICON_CULTURE] 문화 +1을 제공합니다. 도심부 특수지구가 인접해 있으면 [ICON_GOLD] 금 +1 및 [ICON_CULTURE] 문화 +1, 유흥단지 특수지구가 인접해 있으면 [ICON_CULTURE] 문화 +1을 제공합니다. 기술 발전표와 사회 제도 진보에 따라 [ICON_CULTURE] 문화, [ICON_GOLD] 금, [ICON_TOURISM] 관광 및 [ICON_HOUSING] 주거공간이 추가됩니다. 사막이나 사막 언덕에 배치할 수 없으며 도시당 하나만 가능합니다. 골프 코스가 있는 타일은 교체할 수 없습니다. 매력도 +1을 제공합니다.</Text>
-			</Replace>
-			<Replace Tag="LOC_TRAIT_CIVILIZATION_SCOTTISH_ENLIGHTENMENT_DESCRIPTION" Language="ko_KR">
-				<Text>행복한 도시에 [ICON_SCIENCE] 과학 +10%, [ICON_PRODUCTION] 생산력 +10%를 제공합니다. 황홀한 도시에는 [ICON_SCIENCE] 과학 +5%, [ICON_PRODUCTION] 생산력 +5%가 추가로 제공됩니다. 행복한 도시는 캠퍼스마다 [ICON_GreatScientist] 위대한 과학자 점수 +1, 산업구역마다 [ICON_GreatEngineer] 위대한 기술자 점수 +1을 제공합니다. 황홀한 도시에는 과학자 및 기술자 점수 효과가 +1씩 추가로 제공됩니다.</Text>
 			</Replace>
 
 			<!-- ================ Scyth ================ -->
@@ -410,6 +438,9 @@
 		</Replace>
 		<Replace Tag="LOC_PEDIA_CONCEPTS_PAGE_DEDICATIONS_CHAPTER_CONTENT_PARA_5" Language="ko_KR">
 			<Text>기념비성: 새로운 전문 특수지구를 건설할 때마다 시대 점수 +1을 얻습니다. 황금기 시작 시점에서 선택하면 모든 건설자가 [ICON_Movement] 이동력 +2를 얻습니다. [ICON_Faith] 신앙으로 민간 유닛을 구입할 수 있습니다. 건설자 및 개척자를 [ICON_FAITH] 신앙 및 [ICON_GOLD] 금으로 구매할 경우 비용이 10% 감소합니다.</Text>
+		</Replace>
+		<Replace Tag="LOC_PEDIA_CONCEPTS_PAGE_DEDICATIONS_CHAPTER_CONTENT_PARA_6" Language="ko_KR">
+			<Text>여기 용이 있다: 새로운 대륙이나 자연경관을 발견할 때마다 시대 점수 +3을 얻습니다. 전투에서 야만인 외의 해상 유닛을 처치할 때마다 시대 점수 +1을 얻습니다. 황금기 시작 시점에서 선택하면 새로 건설한 도시에서 시작 [ICON_Citizen] 인구 +3을 얻습니다. 해상 및 승선한 유닛이 [ICON_Movement] 이동력 +2를 얻습니다. 원래 [ICON_Capital] 수도의 대륙에 없는 도시가 턴당 충성심 +2를 얻습니다.</Text>
 		</Replace>
 		<Replace Tag="LOC_PEDIA_CONCEPTS_PAGE_DEDICATIONS_CHAPTER_CONTENT_PARA_9" Language="ko_KR">
 			<Text>전투 준비!: 전투에서 야만인이 아닌 군단을 처치할 때마다 시대 점수 +1을 얻고, 전투에서 야만인이 아닌 군대를 처치할 때마다 시대 점수 +2를 얻습니다. 황금기 시작 시점에서 선택하면 공식 전쟁 대비 전쟁광 페널티를 75% 낮추고 대상을 비난하는 즉시 사용할 수 있는 특수 개전 이유가 잠금 해제됩니다. 군사 유닛에 대한 [ICON_Production] 생산력 +15%를 제공하며, 군사 유닛이 도시를 상대로 [ICON_Strength] 전투력 +10를 획득합니다.</Text>
@@ -539,29 +570,43 @@
 
 
 		<!-- ================ I M P R O V E M E N T S ================ -->
-		<Replace Tag="LOC_IMPROVEMENT_FISHERY_DESCRIPTION" Language="ko_KR">
-			<Text>양식장을 지을 수 있는 건설자 능력을 잠금 해제합니다.[NEWLINE][NEWLINE][ICON_Food] 식량 +1을 제공하며, 해양 자원에 인접해 있으면 추가 [ICON_Food] 식량 +1을 제공합니다. 해안 지역에 건설해야 합니다.</Text>
-		</Replace>
-		<Replace Tag="LOC_IMPROVEMENT_FISHING_BOATS_DESCRIPTION" Language="ko_KR">
-			<Text>건설자의 어선 건설 능력을 잠금 해제합니다.[NEWLINE][NEWLINE][ICON_Food] 식량 +1을 제공합니다, [ICON_Production] 생산력 +1을. 유효한 자원 위에 지어야 합니다.[NEWLINE][NEWLINE]사치 자원 위에 지으면 도시가 해당 자원을 사용할 수 있습니다.</Text>
-		</Replace>
+
+			<!-- ================ Fishery ================ -->
+			<Replace Tag="LOC_IMPROVEMENT_FISHERY_DESCRIPTION" Language="ko_KR">
+				<Text>양식장을 지을 수 있는 건설자 능력을 잠금 해제합니다.[NEWLINE][NEWLINE][ICON_Food] 식량 +1을 제공하며, 해양 자원에 인접해 있으면 추가 [ICON_Food] 식량 +1을 제공합니다. 해안 지역에 건설해야 합니다.</Text>
+			</Replace>
+
+			<!-- ================ Fishing Boats ================ -->
+			<Replace Tag="LOC_IMPROVEMENT_FISHING_BOATS_DESCRIPTION" Language="ko_KR">
+				<Text>건설자의 어선 건설 능력을 잠금 해제합니다.[NEWLINE][NEWLINE][ICON_Food] 식량 +1을 제공합니다, [ICON_Production] 생산력 +1을. 유효한 자원 위에 지어야 합니다.[NEWLINE][NEWLINE]사치 자원 위에 지으면 도시가 해당 자원을 사용할 수 있습니다.</Text>
+			</Replace>
 
 
 		<!-- ================ P O L I C I E S ================ -->
-		<Replace Tag="LOC_POLICY_COLLECTIVIZATION_DESCRIPTION_XP2" Language="ko_KR">
-			<Text>국내 [ICON_TradeRoute] 교역로에서 [ICON_Food] 식량 +4 및 [ICON_Production] 생산력 +4.</Text>
-		</Replace>
-		<Replace Tag="LOC_POLICY_FORCE_MODERNIZATION_DESCRIPTION" Language="ko_KR">
-			<Text>모든 유닛 업그레이드에 [ICON_Gold] 금 50% 할인. 모든 유닛 생산 및 업그레이드에 자원 비용 50% 감소.</Text>
-		</Replace>
-		<Replace Tag="LOC_POLICY_RETINUES_DESCRIPTION" Language="ko_KR">
-			<Text>모든 유닛 생산 및 업그레이드에 자원 비용이 50% 감소합니다.</Text>
-		</Replace>
+
+			<!-- ================ Economic ================ -->
+
+				<!-- Collectivization -->
+				<Replace Tag="LOC_POLICY_COLLECTIVIZATION_DESCRIPTION_XP2" Language="ko_KR">
+					<Text>국내 [ICON_TradeRoute] 교역로에서 [ICON_Food] 식량 +4 및 [ICON_Production] 생산력 +4.</Text>
+				</Replace>
 
 			<!-- ================ Military ================ -->
-			<Replace Tag="LOC_POLICY_LIMES_DESCRIPTION" Language="ko_KR">
-				<Text>공성 유닛 생성 및 방어 건물 건설에 대한 [ICON_Production] 생산력 +100%.</Text>
-			</Replace>
+
+				<!-- Force Modernization -->
+				<Replace Tag="LOC_POLICY_FORCE_MODERNIZATION_DESCRIPTION" Language="ko_KR">
+					<Text>모든 유닛 업그레이드에 [ICON_Gold] 금 50% 할인. 모든 유닛 생산 및 업그레이드에 자원 비용 50% 감소.</Text>
+				</Replace>
+
+				<!-- Limes -->
+				<Replace Tag="LOC_POLICY_LIMES_DESCRIPTION" Language="ko_KR">
+					<Text>공성 유닛 생성 및 방어 건물 건설에 대한 [ICON_Production] 생산력 +100%.</Text>
+				</Replace>
+
+				<!-- Retinues -->
+				<Replace Tag="LOC_POLICY_RETINUES_DESCRIPTION" Language="ko_KR">
+					<Text>모든 유닛 생산 및 업그레이드에 자원 비용이 50% 감소합니다.</Text>
+				</Replace>
 
 
 		<!-- ================ P R O M O T I O N S ================ -->
@@ -583,7 +628,7 @@
 
 			<!-- ================ Beliefs ================ -->
 			<Replace Tag="LOC_BELIEF_CROSS_CULTURAL_DIALOGUE_DESCRIPTION" Language="ko_KR">
-				<Text>다른 문명에서 이 종교를 믿는 신자 2명마다 [ICON_Science] 과학 +1을 제공합니다.</Text>
+				<Text>다른 문명에서 이 종교를 믿는 신자 3명마다 [ICON_Science] 과학 +1을 제공합니다.</Text>
 			</Replace>
 			<Replace Tag="LOC_BELIEF_DAR_E_MEHR_DESCRIPTION" Language="ko_KR">
 				<Text>다르-에 메르흐([ICON_Faith] 신앙 + 3, [ICON_CULTURE] 문화 +2)를 건설할 수 있게 됩니다.</Text>
@@ -607,13 +652,13 @@
 				<Text>성지 특수지구 및 성소와 사원에서 [ICON_Housing] 주거공간 +1을 제공합니다.</Text>
 			</Replace>
 			<Replace Tag="LOC_BELIEF_TITHE_DESCRIPTION" Language="ko_KR">
-				<Text>이 종교의 신자 2명마다 [ICON_Gold] 금 +1을 제공합니다.</Text>
+				<Text>이 종교의 신자 3명마다 [ICON_Gold] 금 +1을 제공합니다.</Text>
 			</Replace>
 			<Replace Tag="LOC_BELIEF_WORK_ETHIC_DESCRIPTION" Language="ko_KR">
 				<Text>성소와 사원은 고유 [ICON_Faith] 신앙 생산량만큼 [ICON_Production] 생산력을 제공합니다.</Text>
 			</Replace>
 			<Replace Tag="LOC_BELIEF_WORLD_CHURCH_DESCRIPTION" Language="ko_KR">
-				<Text>다른 문명에서 이 종교를 믿는 신자 2명마다 [ICON_Culture] 문화 +1을 제공합니다.</Text>
+				<Text>다른 문명에서 이 종교를 믿는 신자 3명마다 [ICON_Culture] 문화 +1을 제공합니다.</Text>
 			</Replace>
 			<Replace Tag="LOC_BELIEF_ZEN_MEDITATION_DESCRIPTION" Language="ko_KR">
 				<Text>전문 특수지구를 보유한 도시에 [ICON_Amenities] 쾌적도 +1을 제공합니다.</Text>
@@ -679,11 +724,16 @@
 
 
 		<!-- ================ T E C H N O L O G I E S ================ -->
-		<Replace Tag="LOC_TECH_COMPUTERS_DESCRIPTION" Language="ko_KR">
-			<Text>스파이 유닛 1개를 추가로 생성할 수 있는 능력을 제공합니다. 제국 전체에 [ICON_Tourism] 관광이 +50% 증가합니다.</Text>
-		</Replace>
+
+			<!-- ================ Computers ================ -->
+			<Replace Tag="LOC_TECH_COMPUTERS_DESCRIPTION" Language="ko_KR">
+				<Text>스파이 유닛 1개를 추가로 생성할 수 있는 능력을 제공합니다. 제국 전체에 [ICON_Tourism] 관광이 +50% 증가합니다.</Text>
+			</Replace>
 
 			<!-- ================ Steel ================ -->
+			<Replace Tag="LOC_TECH_STEEL_DESCRIPTION" Language="ko_KR">
+				<Text>제재소 시설에서 [ICON_Production] 생산력 +1을 제공합니다. 플레이어의 모든 도시에 자동으로 요새 전투력 300을 부여하고 원거리 공격을 가능하게 하는 도시 방어를 잠금 해제합니다. 이전의 모든 성벽 시설이 구식으로 변하고 공성 지원 유닛이 효과를 발휘하지 못합니다.</Text>
+			</Replace>
 
 
 		<!-- ================ U N I T S ================ -->
